actualizo rutas
