# src/routers/UsuariosRouter.js
@@ -5,7 +5,7 @@ const usuarioController = require('../controllers/UsuariosController');
 const api = express.Router();
 
 api.post('/usuarios/registrar', usuarioController.RegistrarUsuario);
-api.post('/login', usuarioController.login);
+api.post('/usuarios/login', usuarioController.login);
 api.get('/usuarios/listar', usuarioController.ListarUsuarios);
 api.put('/usuarios/buscarDni/:dni', usuarioController.BuscarByDniUsuario);
 api.delete('/usuarios/eliminar/:dni', usuarioController.EliminarByIdUsuario);
